--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
     }
     td, th {
       border: 1px solid black;
-      padding: 5px;
+      padding: 1px;   /* ✅ Corrected */
       text-align: center;
     }
     /* Classes */
@@ -132,4 +132,5 @@
 
 </body>
 </html>
+
 
